--- a/DICOMViewApp/DICOMViewApp.csproj
+++ b/DICOMViewApp/DICOMViewApp.csproj
@@ -7,6 +7,12 @@
     <ApplicationManifest>app.manifest</ApplicationManifest>
     <AvaloniaUseCompiledBindingsByDefault>true</AvaloniaUseCompiledBindingsByDefault>
   </PropertyGroup>
+  <ItemGroup>
+    <None Remove="Assets\Images\DICOMTest.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <AvaloniaResource Include="Assets\Images\DICOMTest.jpg" />
+  </ItemGroup>
 
 
   <ItemGroup>
@@ -18,5 +24,18 @@
     <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="11.0.10" />
     <PackageReference Include="fo-dicom" Version="5.1.2" />
     <PackageReference Include="fo-dicom.Codecs" Version="5.13.0" />
+  </ItemGroup>
+
+
+  <ItemGroup>
+    <Compile Update="UserControls\DICOMView\UcScaleRuler.axaml.cs">
+      <DependentUpon>UcScaleRuler.axaml</DependentUpon>
+    </Compile>
+    <Compile Update="UserControls\DICOMView\UcTagView.axaml.cs">
+      <DependentUpon>UcTagView.axaml</DependentUpon>
+    </Compile>
+    <Compile Update="UserControls\DICOMView\UCSingleView.axaml.cs">
+      <DependentUpon>UcSingleView.axaml</DependentUpon>
+    </Compile>
   </ItemGroup>
 </Project>
